--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -24,9 +24,9 @@ jobs:
           FBN_PASSWORD: ${{ secrets.MASTER_FBN_PASSWORD }}
           FBN_CLIENT_ID: ${{ secrets.MASTER_FBN_CLIENT_ID }}
           FBN_CLIENT_SECRET: ${{ secrets.MASTER_FBN_CLIENT_SECRET }}
-          FBN_{APP}_API_URL: ${{ secrets.MASTER_FBN_{APP}_API_URL }}
+          FBN_WORKFLOW_API_URL: ${{ secrets.MASTER_FBN_WORKFLOW_API_URL }}
           FBN_APP_NAME: ${{ secrets.MASTER_FBN_CLIENT_ID }}
-          FBN_{APP}_ACCESS_TOKEN: ${{ secrets.MASTER_FBN_ACCESS_TOKEN }}
+          FBN_WORKFLOW_ACCESS_TOKEN: ${{ secrets.MASTER_FBN_ACCESS_TOKEN }}
         run: | 
           echo "env variables for MASTER have been set"
           echo "Changing directory into sdk directory"
