--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
       - FBN_PASSWORD
       - FBN_CLIENT_ID
       - FBN_CLIENT_SECRET
-      - FBN_WORKFLOW_API_URL
+      - FBN_WORKFLOW_API_URL=${FBN_BASE_API_URL}/workflow
       - FBN_APP_NAME
     volumes:
       - .:/usr/src
