--- a/sdk/Finbourne.Workflow.Sdk/Finbourne.Workflow.Sdk.csproj
+++ b/sdk/Finbourne.Workflow.Sdk/Finbourne.Workflow.Sdk.csproj
@@ -12,13 +12,14 @@
     <Description>A library generated from a OpenAPI doc</Description>
     <Copyright>FINBOURNE Technology Ltd</Copyright>
     <RootNamespace>Finbourne.Workflow.Sdk</RootNamespace>
-    <Version>0.1.333</Version>
+    <Version>0.1.342</Version>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\Finbourne.Workflow.Sdk.xml</DocumentationFile>
     <RepositoryUrl>https://github.com/finbourne/workflow-sdk-csharp-preview.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageReleaseNotes>Minor update</PackageReleaseNotes>
     <PackageTags>FINBOURNE, LUSID, SDK</PackageTags>
     <Nullable>annotations</Nullable>
+    <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
   </PropertyGroup>
 
   <ItemGroup>
